--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Installing Surge
-        run: npm i -g surg
+        run: npm i -g surge
       - name: deploying using surge
         run: surge  ./ cautious-visitor.surge.sh--token ${{secrets.SURGE_TOKEN}}
